# PowerMeter

./: .gitignore  .mxproject  CMakeLists.txt  PowerMeter.ioc  debugConfig.cfg  stm32f030c8tx_flash.ld
App/Inc/: adc_task.h  app.h  board.h  button_handler.h  calculate_task.h  lcd_ui.h  modbus_rs485.h  rms_statistics.h  spi_task.h
App/Src/: adc_task.c  app.c  button_handler.c  calculate_task.c  lcd_ui.c  modbus_rs485.c  rms_statistics.c  spi_task.c
Core/Inc/: main.h  stm32f0xx_it.h
Core/Src/: main.c  stm32f0xx_it.c
Utils/Adc/: adc.c  adc.h
Utils/Delay/: delay.c  delay.h
Utils/FreeModbus/modbus/functions/: mbfunccoils_m.c  mbfuncdisc_m.c  mbfuncholding_m.c  mbfuncinput_m.c  mbutils.c
Utils/FreeModbus/modbus/include/: mb_m.h  mbport.h
Utils/FreeModbus/modbus/rtu/: mbrtu.c
Utils/FreeModbus/port/: port.h  user_mb_app.c  user_mb_app.h
Utils/FreeModbus/port/scheduler/: port.c  portevent_m.c  portserial.c  portserial_m.c  porttimer.c  porttimer_m.c
Utils/Lcd/: font5x7.c  font5x7.h  font8x8.c  font8x8.h  tg12864.c  tg12864.h  tg12864_font.h
Utils/Scheduler/: scheduler.c  scheduler.h
Utils/Spi/: spi.c  spi.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  old
esp32/: esp32.ino  esp32_combined.ino  esp32_dma.ino  esp32_simple.ino
